# dll-proxy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-dll.yml
original_dlls/: README.md  extract_exports.py
src/: main.cpp
src/exports/: version.h
